redirect .well-known links to the right place

--- a/resources/000-default.conf
+++ b/resources/000-default.conf
@@ -3,6 +3,9 @@
     DocumentRoot /var/www/html
     Alias /nextcloud /var/www/html
 
+    Redirect 301 /.well-known/carddav /nextcloud/remote.php/dav
+    Redirect 301 /.well-known/caldav /nextcloud/remote.php/dav
+
     <Directory /var/www/html/>
         Options +FollowSymlinks
         AllowOverride All
