--- a/resources/60-nextcloud.ini
+++ b/resources/60-nextcloud.ini
@@ -5,3 +5,5 @@ opcache.max_accelerated_files=10000
 opcache.memory_consumption=128
 opcache.save_comments=1
 opcache.revalidate_freq=1
+
+memory_limit = 512M
