--- a/resources/000-default.conf
+++ b/resources/000-default.conf
@@ -14,5 +14,8 @@
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
+<IfModule mod_headers.c>
+      Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains"
+</IfModule>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
